# alpha-osk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  IDEAS.md  LLM_ONBOARDING.md  README.md  TODO.md  check.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/cf-worker/: README.md  package-lock.json  package.json
backend/cf-worker/src/: worker.ts
cpp/: Analytics.cpp  Analytics.h  DataExport.cpp  DataExport.h  KeyboardBridge.cpp  KeyboardBridge.h  Paths.cpp  Paths.h  README.md  SnippetStore.cpp  SnippetStore.h  TelemetryClient.cpp  TelemetryClient.h  WinUtil.cpp  WinUtil.h  main.cpp
cpp/platform/: KeySynthesizer.cpp  KeySynthesizer.h  PasswordDetect.cpp  PasswordDetect.h  WindowsKeySynthesizer.cpp  WindowsKeySynthesizer.h
cpp/prediction/: FuzzyRecognizer.cpp  FuzzyRecognizer.h  HybridPredictor.cpp  HybridPredictor.h  NgramPredictor.cpp  NgramPredictor.h  PPMPredictor.cpp  PPMPredictor.h  SwipeRecognizer.cpp  SwipeRecognizer.h  VocabularyPack.cpp  VocabularyPack.h
cpp/windows/: app.rc.in
data/: common_bigrams.txt  common_misspellings.txt  common_trigrams.txt
data/layouts/: colemak.json  dvorak.json  qwerty.json
docs/: AUTO_UPDATE.md  BRANDING.md  EXTRA_BUTTONS.md  FEDERATED_LEARNING.md  FUZZY_RECOGNITION.md  HYBRID_MERGING.md  INNOVATION_SOURCES.md  LAUNCH_PLAN.md  LINUX.md  LLM_ONBOARDING.md  LONG_PRESS_ALTERNATES.md  MACOS.md  PLATFORM_ARCHITECTURE.md  PRIVACY.md  README.md  SLIDES_WORKFLOW.md  WHITEPAPER.md  WINDOWS.md  launch_tasks.csv
docs/architecture/: EXTRA_BUTTONS.md  FUZZY_RECOGNITION.md  GOTCHAS.md  HYBRID_MERGING.md  LONG_PRESS_ALTERNATES.md  MODULAR_LAYOUTS.md  PLATFORM_ARCHITECTURE.md  PPM.md  PREDICTION_NOTES.md  SWIPE_TYPING.md  TELEMETRY.md
docs/research/: CONSTELLATION_INTEGRATION_GUIDE.md  DESIGN.md  INNOVATION_SOURCES.md  LEARNING_IMPROVEMENTS.md  LLM_ONBOARDING.md  LLM_ONBOARDING_TEMPLATE.md  MOBILE_KEYBOARD_INNOVATIONS.md  PHILOSOPHY.md  PREDICTION_OPTIONS.md  SECURITY_AUDIT.md  SLIDES_WORKFLOW.md  STRATEGIC_OPPORTUNITIES.md  TECHNICAL_INNOVATIONS.md  TRAINING_DATA_STRATEGY.md  USER_PERSPECTIVE.md
docs/roadmap/: DOCUMENT_IMPORT.md  ECOSYSTEM.md  LAUNCH_PLAN.md  MACROVOX_INTEGRATION.md  launch_tasks.csv
qml/: Main.qml
qml/components/: AnalyticsDashboard.qml  FunctionRow.qml  HelpPanel.qml  KeyButton.qml  ModelVisualization.qml  NavigationPanel.qml  NumpadPanel.qml  SettingsSection.qml  UnifiedSettingsPanel.qml  qmldir
scripts/: downloads.py  mac_keysend_diag.py
src/: __version__.py  _update_relauncher.py  analytics.py  data_export.py  keyboard_app.py  keyboard_bridge.py  snippets.py  telemetry.py  updater.py
src/platform/: __init__.py  base.py  linux.py  macos.py  password_detect.py  windows.py  x11_window.py
src/prediction/: autocorrect.py  fuzzy_recognizer.py  hybrid_predictor.py  ngram_predictor.py  ppm_predictor.py  symspell.py  vocabulary_pack.py
templates/: dashboard.html  slides.html  slideshow-template.html
tests/: test_analytics.py  test_autocorrect.py  test_data_export.py  test_fuzzy_recognizer.py  test_hybrid_predictor.py  test_keyboard_bridge.py  test_ngram_predictor.py  test_password_detect.py  test_platform.py  test_snippets.py  test_symspell.py  test_update_relauncher.py  test_updater.py  test_vocabulary_pack.py  test_x11_window.py
